[package]
name = "solana-token-toolkit"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "Token account workflow primitives for Solana applications"
repository = "https://github.com/daiwanwei/solana-token-toolkit"
readme = "README.md"
keywords = ["solana", "token", "spl-token-2022", "ata"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
# Stable Solana client line for v0.1. Solana client 4.x is still beta and
# currently does not align cleanly with all public account types used here.
solana-client = "3"
solana-account = "3"
solana-instruction = "3"
solana-keypair = "3"
solana-program-pack = "3"
solana-pubkey = "4"
solana-signer = "3"
# Latest stable system-interface line; `bincode` enables instruction builders
# such as system_instruction::transfer and create_account.
solana-system-interface = { version = "3", features = ["bincode"] }
spl-associated-token-account-interface = "2"
spl-token = "9"
spl-token-2022-interface = "2"
spl-token-interface = "2"
thiserror = "2"

[dev-dependencies]
litesvm = "0.11"
solana-transaction = "3"
tokio = { version = "1", features = ["macros", "rt"] }
